# data_structures_and_algorithms

./: .clangd  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: O(2ⁿ).c.39D48AB073511686.idx  O(log n).c.2589EE2C74A12203.idx  O(n).c.0999332623B16498.idx  O(n²).c.65B2836D4C958AA0.idx  arvore_simples.c.6C7837AAF4E8E1B2.idx  arvore_simples.h.B79D68EF80798526.idx  atividade.cpp.CE49466A3F2C06C2.idx  bubble.hpp.591860AF1FE8A966.idx  buscas.hpp.D5EF60E9BE507156.idx  heap.hpp.DA127A95A44A0314.idx  insertion.hpp.90BA031E6F86DCEF.idx  linked_list.hpp.E4AF77C5EB245B26.idx  linked_lists_tests.cpp.BF65DA916AE8BFD7.idx  merge.hpp.6C5C8B666CEE88E6.idx  print_matrix.hpp.9634E688FF25438A.idx  quick.hpp.D7FC91D50209EB7E.idx  selection.hpp.7F1932B0CC1C4211.idx  shell.hpp.195F1BA4EF71AF8A.idx  testes.cpp.155E25F949BFC1D4.idx  testes.cpp.3FC82823EA19C490.idx
exercicios/: matriz_esparsa.cpp
src/: linked.cpp  main.cpp
src/arvores/: arvore_simples.c  arvore_simples.h
src/busca/: buscas.hpp  testes.cpp
src/complexidade/: O(2ⁿ).c  O(log n).c  O(n).c  O(n²).c
src/grafos/: atividade.cpp  print_matrix.hpp
src/linked_l/: double_linked_list.hpp  ki.cpp  ki.h  ki.hpp  linked_list.cpp  linked_list.hpp  linked_lists_tests.cpp
src/ordenacao/: bubble.hpp  heap.hpp  insertion.hpp  merge.hpp  quick.hpp  selection.hpp  shell.hpp  testes.cpp
